samples/_failures_safe/1761636551_c7a58a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb16b150.c: In function ‘main’:
./samples/SAFE/__tmp_bb16b150.c:156:17: error: expected declaration or statement at end of input
  156 |                 } else {
      |                 ^
./samples/SAFE/__tmp_bb16b150.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bb16b150.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bb16b150.c:156:17: error: expected declaration or statement at end of input
